Bug 470169 - KBibTeX keeps asking to be set as default editor for bibliography formats
Summary: KBibTeX keeps asking to be set as default editor for bibliography formats
Status: RESOLVED FIXED
Alias: None
Product: KBibTeX
Classification: Applications
Component: User interface (other bugs)
Version First Reported In: 0.10
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Thomas Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-23 15:33 UTC by Nuno Gomes
Modified: 2023-12-15 23:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.1
Sentry Crash Report:


Attachments
Screenshot of the pop up window. (22.40 KB, image/png)
2023-05-23 15:33 UTC, Nuno Gomes
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nuno Gomes 2023-05-23 15:33:18 UTC
Created attachment 159205 [details]
Screenshot of the pop up window.

SUMMARY

Every time I start KBibTeX, it asks me if I want make it the default editor for bibliography formats. I always press the "Keep settings unchanged" button , but the next time I open it, this window pops up.


STEPS TO REPRODUCE
1. Open KBibTeX
2. Press the "Keep settings unchanged" button
3. Restart KBibTeX

OBSERVED RESULT

The next time I start KBibTeX, a window pops up asking if I want to make it the default bibliography editor.

EXPECTED RESULT

After pressing the "Keep settings unchanged" button, I was expecting this window to disappear.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma:  Manjaro Linux
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9

ADDITIONAL INFORMATION
Comment 1 Thomas Fischer 2023-05-28 19:49:47 UTC
Please check this Git commit if it fixes the problem for you:
https://invent.kde.org/thomasfischer/kbibtex/-/commit/18eccc2585c19b716d207da3e8eb863b77911ec3

It essentially modifies the dialog box with a 'don't ask again' checkbox. Once you have checked this, you shouldn't get bothered again until you reset all  'don't ask again' checkbox in the settings under 'General'.
Comment 2 Thomas Fischer 2023-12-15 23:07:53 UTC
Git commit f6bcfa9baca44e4000d98096d45d7addfb6a51f2 by Thomas Fischer.
Committed on 15/12/2023 at 23:36.
Pushed by thomasfischer into branch 'kbibtex/0.10'.

Add 'don't ask again' when notifying on the default bibliography editor

Add a 'don't ask again' checkbox when notifying the user that KBibTeX is
not the default bibliography editor.

In the 'General' settings widget, add a push button that allow to clear
all 'don't ask again' settings.
FIXED-IN: 0.10.1

M  +2    -0    ChangeLog
M  +20   -1    src/gui/preferences/settingsgeneralwidget.cpp
M  +2    -2    src/program/mainwindow.cpp

https://invent.kde.org/office/kbibtex/-/commit/f6bcfa9baca44e4000d98096d45d7addfb6a51f2
Comment 3 Thomas Fischer 2023-12-15 23:39:55 UTC
Git commit e2073d8e71817a0f03b67637d4d1ebe6e67ac0aa by Thomas Fischer.
Committed on 16/12/2023 at 00:34.
Pushed by thomasfischer into branch 'master'.

Add 'don't ask again' when notifying on the default bibliography editor

Add a 'don't ask again' checkbox when notifying the user that KBibTeX is
not the default bibliography editor.

In the 'General' settings widget, add a push button that allow to clear
all 'don't ask again' settings.

Cherry-pick of commit f6bcfa9baca44e4000d9 from branch 'kbibtex/0.10'.

M  +2    -0    ChangeLog
M  +20   -1    src/gui/preferences/settingsgeneralwidget.cpp
M  +2    -2    src/program/mainwindow.cpp

https://invent.kde.org/office/kbibtex/-/commit/e2073d8e71817a0f03b67637d4d1ebe6e67ac0aa