Add 'don't ask again' when notifying on the default bibliography editor

Add a 'don't ask again' checkbox when notifying the user that KBibTeX is
not the default bibliography editor.

In the 'General' settings widget, add a push button that allow to clear
all 'don't ask again' settings.

BUG: 470169
FIXED-IN: 0.10.1